[tool.poetry]
name = "nnequiv"
version = "0.1.0"
description = ""
authors = ["João Batista Pereira Matos Júnior <matosjunior.jb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
